<resources>
    <string name="app_name">The Lending Hub</string>
    <string name="the_premium">
    The premium financial platform of Saudi Arabia
    </string>
    <string name="select_your">
    Select your preference
    </string>
    <string name="register">
    Register
    </string>
    <string name="login">
    Login
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="premium_fin">
        Premium Fintech Platform \nof <b>Saudi Arabia</b>
    </string>
    <string name="we_are_a_cr">
    We are a crowd funding investment platform which allows our customers to apply for loans at the best interest rates available in market
    </string>
    <string name="visit_the_lending_hub">
    Visit thelendinghub.com
    </string>
    <string name="apply_for_l">
    Next
    </string>
    <string name="investment_">
    Investment at its \nsimplest
    </string>
    <string name="setup_your_">
    Setup your wallet, add funds, see investment plans and done.\n\nIts that simple ...
    </string>
    <string name="previous">
    Previous
    </string>
    <string name="register_ob">
    Register
    </string>
    <string name="next">
    Next
    </string>
    <string name="applying_fo">
    Applying for loans is a breeze
    </string>
    <string name="complete_yo">
    Complete your profile, answer few questions, and there you are.\n\nEasy peasy ...
    </string>
    <string name="fast_secure">
    Fast, Secure &amp; Reliable
    </string>
    <string name="the_lending">
    The Lending Hub is the fastest loan application and investment app in SA.\n\nExplore our app to be surprised ...
    </string>

    <string name="register_signup">
    Register
    </string>
    <string name="share_your_">
    Share your registration preference below. \n\nThe app allows you to sign up as one of the two \nprovided options. Please select one to proceed.
    </string>
    <string name="share_your_one">
    Share your credentials, registration preference\nand then proceed to verification.
    </string>
    <string name="borrower">
        Borrower
    </string>

    <string name="you_can_app">
    You can apply for loans and borrow funds.
    </string>
    <string name="lender">
    Lender
    </string>
    <string name="invest_into">
    Invest into multiple loan opportunities and get the best ROI.
    </string>
    <string name="proceed">
    Proceed
    </string>
    <string name="id_number">
    ID Number
    </string>
    <string name="some_id">
    1000000000
    </string>

    <string name="cell_number">
    Cell Number
    </string>
    <string name="some_cell">
    +966 | 50 000 0000
    </string>
    <string name="date_of_bir">
    Date of Birth
    </string>
    <string name="please_sele">
    Please select a date
    </string>
    <string name="proceed_to_verification">
    Proceed to Verification
    </string>
    <string name="please_use_">
    Please use the number associated with Abshar.
    </string>
    <string name="error_detec">
    1 error detected in form
    </string>
    <string name="invalid_num">
    Invalid Number ID
    </string>
    <string name="your_entere">
    Your entered Iqama didn’t turn out to be valid. Please enter a valid Iqama to proceed to verification of your credentials.
    </string>
    <string name="the_incorre">
    The incorrect field is highlighted as red.
    </string>
    <string name="reg_continue">
    Continue
    </string>
</resources>