<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    android:background="@drawable/base_popup">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline51"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline51"
        app:layout_constraintStart_toStartOf="@+id/guideline52"
        app:srcCompat="@drawable/icon_error" />


    <TextView
        android:id="@+id/error_detec"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="8sp"
        android:text="@string/error_detec"
        android:textAppearance="@style/error_detec"
        android:translationY="-4.07sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline51"
        app:layout_constraintEnd_toStartOf="@+id/guideline53"
        app:layout_constraintStart_toEndOf="@+id/imageView2" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="#D7DFE6"
        app:layout_constraintEnd_toStartOf="@+id/guideline53"
        app:layout_constraintStart_toStartOf="@+id/guideline52"
        app:layout_constraintTop_toTopOf="@+id/guideline51" />

    <TextView
        android:id="@+id/invalid_num"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:gravity="top"
        android:lineSpacingExtra="8sp"
        android:text="@string/invalid_num"
        android:textAppearance="@style/invalid_num"
        android:translationY="-4.07sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline53"
        app:layout_constraintStart_toStartOf="@+id/guideline52"
        app:layout_constraintTop_toTopOf="@+id/guideline51" />

    <TextView
        android:id="@+id/your_entere"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:lineSpacingExtra="8sp"
        android:text="@string/your_entere"
        android:textAppearance="@style/your_entere"
        android:translationY="-3.8sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline54"
        app:layout_constraintEnd_toStartOf="@+id/guideline53"
        app:layout_constraintStart_toStartOf="@+id/guideline52" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:background="#D7DFE6"
        app:layout_constraintEnd_toStartOf="@+id/guideline53"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline52"
        app:layout_constraintTop_toTopOf="@+id/guideline54" />


    <TextView
        android:id="@+id/the_incorre"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="24dp"
        android:gravity="top"
        android:lineSpacingExtra="8sp"
        android:text="@string/the_incorre"
        android:textAppearance="@style/the_incorre"
        android:translationY="-4.07sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline53"
        app:layout_constraintStart_toStartOf="@+id/guideline52"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <com.example.thelendinghub.custom.LargeButton
        android:id="@+id/buttonContinue"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline57"
        app:layout_constraintEnd_toStartOf="@+id/guideline53"
        app:layout_constraintStart_toStartOf="@+id/guideline52"
        app:layout_constraintTop_toTopOf="@+id/guideline56"
        app:layout_constraintVertical_bias="1.0"
        app:setArrow="@drawable/arrow_icon"
        app:setArrowColor="#ffffff"
        app:setBackground="@drawable/button_seco"
        app:setDirection="ltr"
        app:setTitle="@string/reg_continue"
        app:setTitleColor="#ffffff" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline52"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline53"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline54"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.44" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline56"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.76" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline57"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />
</androidx.constraintlayout.widget.ConstraintLayout>