<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:translationZ="2dp"
    tools:context=".fragment.OnBoardTwoFragment">
    <include layout="@layout/customer_onboard"/>
    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/investment"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/investment_"
        style="@style/investment_"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="70dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="-16sp"
        android:text="@string/investment_"
        android:translationZ="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

    <TextView
        android:id="@+id/setup_your_"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:gravity="center_horizontal|bottom"
        android:lineSpacingExtra="5sp"
        android:translationZ="2dp"
        android:text="@string/setup_your_"
        android:textAppearance="@style/setup_your_"
        android:translationY="2.34sp"
        app:layout_constraintEnd_toEndOf="@+id/investment_"
        app:layout_constraintStart_toStartOf="@+id/investment_"
        app:layout_constraintTop_toBottomOf="@+id/investment_" />


    <com.example.thelendinghub.custom.LargeButton
        android:id="@+id/buttonPrevious"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="260dp"
        android:layout_marginBottom="28dp"
        android:text="com.example.thelendinghub.custom.LargeButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:setArrow="@drawable/arrow_icon"
        app:setArrowColor="#FAE345"
        app:setBackground="@drawable/button_prim"
        app:setTitle="@string/apply_for_l"
        app:setTitleColor="#FAE345" />

    <com.example.thelendinghub.custom.LargeButton
        android:id="@+id/buttonNext"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:text="com.example.thelendinghub.custom.LargeButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:setArrow="@drawable/arrow_icon"
        app:setArrowColor="#FAE345"
        app:setBackground="@drawable/button_prim"
        app:setTitle="@string/apply_for_l"
        app:setTitleColor="#FAE345" />

</androidx.constraintlayout.widget.ConstraintLayout>